@@ -62,7 +62,7 @@
 
                 <para><command>systemd-coredumpctl</command> may be used to
                 retrieve coredumps from
-                <citerefentry><refentrytitle>systemd-journald</refentrytitle><manvolnum>8</manvolnum></citerefentry>.</para>
+                <citerefentry><refentrytitle>journald</refentrytitle><manvolnum>8</manvolnum></citerefentry>.</para>
         </refsect1>
 
         <refsect1>
