@@ -12,6 +12,7 @@ systemd System and Service Manager
     - use abi prefix JOURNAL instead of LIBSYSTEMD_JOURNAL in journal.sym;
     - rename unit systemd-journald.socket to journald.socket;
     - rename unit systemd-journald.service to journald.service;
+    - rename systemd-journald to journald;
  * remove systemd-journal-remote program;
  * remove systemd-journal-gatewayd program, service and socket;
  * remove gnutls support;
